Fix single-pixel jump when navigation bar item becomes active
Without active navigation bar item, the menu bar was 1px less tall than
when an item was active, since the additional single-pixel border
increases the height of the element which is not accounted for by a
decreased padding. This commit fixes this behaviour by decreasing the
single-pixel padding to none to account for the single-pixel border.

--- a/assets/css/style-freenet-7.css
+++ b/assets/css/style-freenet-7.css
@@ -157,9 +157,15 @@ background-color: rgba(0, 0, 0, 0.8);
 border-color: transparent;
 }
 
-.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav-page > .active > a, .navbar-inverse .navbar-nav-page > .active > a:hover, .navbar-inverse .navbar-nav-page > .active > a:focus {
-background-color: transparent;
-border-bottom: 1px solid rgb(40, 141, 203);
+.navbar-inverse .navbar-nav > .active > a,
+.navbar-inverse .navbar-nav > .active > a:hover,
+.navbar-inverse .navbar-nav > .active > a:focus,
+.navbar-inverse .navbar-nav-page > .active > a,
+.navbar-inverse .navbar-nav-page > .active > a:hover,
+.navbar-inverse .navbar-nav-page > .active > a:focus {
+    background-color: transparent;
+    border-bottom: 1px solid rgb(40, 141, 203);
+    padding-bottom: 0px;
 }
 
 .navbar-inverse .navbar-nav > li > a,  .navbar-inverse .navbar-nav-page > li > a{
